<resources>
    <string name="app_name">eTherapyII</string>
    <string name="introTitle">Welcome</string>
    <string name="introDescription">Take control of your physical or occupational therapy with eTherapy- your own personalized training app that uses wireless sensors to ensure proper recovery so that you can return to being you 😀.</string>
    <string name="tap">Tap Anywhere to Continue</string>
    <string name="therapist_menu_home">Home</string>
    <string name="therapist_menu_exercises">Exercises</string>
    <string name="therapist_menu_patients">Patients</string>
    <string name="menu_activities">Activities</string>
    <string name="menu_data">Me</string>
    <string name="menu_toDoList">To-Do List</string>
    <string name="name_placeholder">INSERT NAME HERE</string>
    <string name="placeholder">INSERT TEXT HERE</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_an_exercise">Select an Exercise</string>
    <string name="head_orientation_training_tool">Head Orientation Training Tool</string>
    <string name="sensor_placement">Sensor Placement</string>
    <string name="next">Next</string>
    <string name="connect">Connect</string>
    <string name="calibrate">Calibrate</string>
    <string name="disconnected">Disconnected</string>
    <string name="battery_percent">    %</string>
    <string name="sensor_2">Sensor 2</string>
    <string name="sensor_1">Sensor 1</string>
    <string name="connect_sensors">Connect Sensors</string>
    <string name="start_activity">Start Activity</string>
    <string name="number_of_repetitions">Number of repetitions:</string>
    <string name="number_of_sets">Number of sets:</string>
    <string name="holding_time_on_target">Holding time on target:</string>
    <string name="Accel_Calibration_Instructions">Accelerometer Calibration Instructions:\nLay the sensor flat for three seconds</string>
    <string name="Magnetic_Calibration_Instructions">Magnetic Calibration Instructions:\n1. Orient the sensor with y forward, x right, and z upwards\n2. Rotate 360° about the x axis towards you slowly\n3. Point y to the right\n4. Rotate 360° about the y axis\n5. Point z to the right\n6. Rotate 360° about the z axis\n7. Press \'Stop Calibrating\'</string>
    <string name="blank_percentage">"      %"</string>
    <string name="oops">OOPS!</string>
    <string name="WIP_Message">The page you\'re trying to reach is still a work in progress</string>
    <string name="tap_anywhere_to_return">Tap anywhere to return</string>
    <string name="therapy">Therapy</string>
    <string name="stretching">Stretching</string>
    <string name="choose_activity">Choose Activity</string>
    <string name="home">HOME</string>
    <string name="goniometer">Goniometer</string>
    <string name="exit">Exit</string>
    <string name="title_placeholder">title placeholder</string>
    <string name="body_text_placeholder">body placeholder</string>
    <string name="reps">Reps</string>
    <string name="time">Time</string>
    <string name="begin">Begin</string>
    <string name="stop">Stop</string>
    <string name="distance_display">Distance Display\n</string>
</resources>